profilelist1exp/unpackaged/objects/Trigger_Handler__mdt.object
<CustomObject>
    <description>A trigger handler class to run on the given sObject and trigger event</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the trigger class be run? Only uncheck this with extreme caution as it disabling an important triggers could cause data inconsistency</description>
        <inlineHelpText>Should the trigger class be run? Only uncheck this with extreme caution as it disabling an important triggers could cause data inconsistency</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>The Apex class to run</description>
        <inlineHelpText>The Apex class to run</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Trigger event to run this handler</description>
        <inlineHelpText>Trigger event to run this handler</inlineHelpText>
        <label>Event</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BeforeInsert</fullName>
                    <default>true</default>
                    <label>BeforeInsert</label>
                </value>
                <value>
                    <fullName>BeforeUpdate</fullName>
                </value>
                <value>
                    <fullName>BeforeDelete</fullName>
                </value>
                <value>
                    <fullName>BeforeUndelete</fullName>
                </value>
                <value>
                    <fullName>AfterInsert</fullName>
                </value>
                <value>
                    <fullName>AfterUpdate</fullName>
                </value>
                <value>
                    <fullName>AfterDelete</fullName>
                </value>
                <value>
                    <fullName>AfterUndelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Handlers are run in ascending order of this field for a given sObject and Event. If order is unimportant, you can just use 0.</description>
        <inlineHelpText>Handlers are run in ascending order of this field for a given sObject and Event Handlers are run in ascending order of this field for a given sObject and Event. If order is unimportant, you can just use 0.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <description>The sObject to run the handler on</description>
        <inlineHelpText>The sObject to run the handler on</inlineHelpText>
        <label>sObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>